# xbitmap

./: .gitignore  CMakeLists.txt  README.md
source/: xbitmap.cpp  xbitmap.h  xcolor.h
source/bridges/xserializer/: xbitmap_to_xserializer.h
source/implementation/: xbitmap_inline.h  xcolor_inline.h
source/unit_test/: main.cpp  xcolor_unittest.h
